--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/logo.svg" />
+		<link rel="icon" type="image/svg+xml" href="/static/lamp.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,10 +22,27 @@
 			type="text/css"
 			href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
 		/>
-		<title>Ремонт квартир в Санкт-Петербурге</title>
+		<title>Метод Уюта | Комплексный ремонт квартир в Санкт-Петербурге</title>
+		<meta
+			name="description"
+			content="Kачественный ремонт квартир в Санкт-Петербурге под ключ для тех, кто мечтает оформить свой уютный уголок."
+		/>
 	</head>
 	<body>
 		<div id="root"></div>
+		<script type="application/ld+json">
+			{
+				"@context": "http://schema.org",
+				"@type": "HomeAndConstructionBusiness",
+				"name": "Метод Уюта",
+				"description": "Kачественный ремонт квартир в Санкт-Петербурге под ключ для тех, кто мечтает оформить свой уютный уголок.",
+				"address": {
+					"@type": "PostalAddress",
+					"addressLocality": "Санкт-Петербург"
+				},
+				"url": "https://metod-yuta.ru"
+			}
+		</script>
 		<script type="module" src="/src/main.jsx"></script>
 		<script type="text/javascript">
 			;(function (m, e, t, r, i, k, a) {
